--- a/style.css
+++ b/style.css
@@ -42,9 +42,9 @@ h2{
 /*   font-size: 10px; */
 }
 h3{
-  font-family:fantasy;
+ font-family:monospace;
   background-color:rgb(255, 245, 250);
-  font-size:30
+  font-size:30px;
 }
 
 #start{
